--- a/CSS/example_06.css
+++ b/CSS/example_06.css
@@ -45,6 +45,7 @@ h2 {
     }
 
     input[type="email"], span {        float: right;
+      height: 40px
     }
 textarea {
         padding-top: 10px;
