--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,18 @@ header .logo {
   width: 166px;
   height: 153px;
 }
+/* .card-2::before {
+  content: "";
+  width: 120px;
+  height: 120px;
+  border-radius: 30px 0 5px 0;
+  background-color: red;
+  position: absolute;
+  bottom: -50px;
+  left: -50px;
+  z-index: -1;
+} */
+
 .card-3 img {
   width: 67px;
   height: 75px;
@@ -338,4 +350,105 @@ span {
   font-size: 16px;
   font-weight: 600;
   line-height: 1.8;
+}
+
+li {
+  list-style: none;
+  text-align: left;
+}
+
+footer {
+  display: flex;
+  position: relative;
+  top: 1800px;
+  padding-bottom: 140px;
+  width: 100%;
+  justify-content: space-evenly;
+  font-family: "Poppins", sans-serif;
+}
+.footer-1 {
+  width: 25%;
+  position: relative;
+  top: -15px;
+}
+.footer-3 {
+  width: 20%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.btn {
+  width: 100%;
+}
+.footer-2 {
+  width: 390px;
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  justify-content: space-around;
+  padding-right: 20px;
+}
+.footer-2 nav {
+  justify-content: flex-start;
+}
+.btn div {
+  border-radius: 20px;
+  width: 41px;
+  height: 41px;
+  margin-right: 20px;
+  text-align: center;
+  padding-top: 12px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  display: inline-block;
+}
+.app {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+.app p {
+  width: 100%;
+}
+.social-button-2 {
+  background-image: url(/images/bg\ button.png);
+  background-size: contain;
+}
+
+.Discover {
+  background-color: black;
+  width: 100px;
+  height: 35px;
+  border-radius: 17px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.Discover img {
+  width: 73px;
+  height: 18px;
+}
+footer h2 {
+  color: #181e4b;
+  font-size: 44px;
+}
+footer p {
+  color: #5e6282;
+  font-size: 13px;
+  width: 60%;
+  padding-top: 20px;
+}
+
+footer a {
+  font-size: 18px;
+  color: #5e6282;
+  line-height: 1.8;
+}
+a:visited {
+  color: #5e6282;
+}
+footer h3 {
+  color: #080809;
+  font-size: 21;
+  font-weight: boild;
+  padding-bottom: 20px;
 }
