--- a/Buyer.css
+++ b/Buyer.css
@@ -61,6 +61,7 @@ body {
   /* gap: 10px; */
   grid-template-rows: 90px 1fr;
   grid-template-columns: 250px 1fr;
+  padding-top: 80px;
 }
 
 #body2 {
